Feat: Add dropdown para selecionar tema.
Dropdown para selecionar o tema.
Reformulando todo o theme provider para utilizar o ThemeMode ao invés do ThemeData.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -16,5 +16,9 @@
     "appearance": "Appearance",
     "rate_app": "Rate the app",
     "privacy_term": "Privacy and term",
-    "about_us": "About us"
+    "about_us": "About us",
+
+    "system": "System",
+    "light": "Light",
+    "dark": "Dark"
 }
